@@ -6,23 +6,24 @@ import co.za.carrental.service.IBookingService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.context.annotation.Bean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@WebMvcTest(BookingController.class)
+@WebMvcTest(controllers = BookingController.class)
+@AutoConfigureMockMvc(addFilters = false)
 class BookingControllerTest {
 
     @Autowired
@@ -34,12 +35,14 @@ class BookingControllerTest {
     @MockBean
     private IBookingService bookingService;
 
-
     @Test
     void testCreate() throws Exception {
-        BookingRequest bookingRequest = new BookingRequest();
+        when(bookingService.createFromRequest(any(BookingRequest.class)))
+                .thenReturn(new Booking());
 
-        when(bookingService.createFromRequest(bookingRequest)).thenReturn(new Booking());
+        BookingRequest bookingRequest = new BookingRequest();
+        bookingRequest.setFrom("2025-05-10");
+        bookingRequest.setTo("2025-05-11");
 
         mockMvc.perform(post("/api/bookings")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -49,7 +52,7 @@ class BookingControllerTest {
 
     @Test
     void testRead() throws Exception {
-        when(bookingService.read("1")).thenReturn(Optional.of(new Booking()));
+        when(bookingService.read(eq("1"))).thenReturn(Optional.of(new Booking()));
 
         mockMvc.perform(get("/api/bookings/1"))
                 .andExpect(status().isOk());
@@ -57,17 +60,21 @@ class BookingControllerTest {
 
     @Test
     void testUpdate() throws Exception {
-        Booking booking = new Booking();
-        when(bookingService.update(booking)).thenReturn(booking);
+        Booking existing = new Booking();
+        existing.setBookingId("1");
+
+        when(bookingService.read("1")).thenReturn(Optional.of(existing));
+        when(bookingService.update(any(Booking.class))).thenReturn(existing);
 
         mockMvc.perform(put("/api/bookings/1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(booking)))
+                        .content(objectMapper.writeValueAsString(existing)))
                 .andExpect(status().isOk());
     }
 
     @Test
     void testDelete() throws Exception {
+        when(bookingService.read("1")).thenReturn(Optional.of(new Booking()));
         doNothing().when(bookingService).delete("1");
 
         mockMvc.perform(delete("/api/bookings/1"))
@@ -76,7 +83,7 @@ class BookingControllerTest {
 
     @Test
     void testGetAll() throws Exception {
-        when(bookingService.getAll()).thenReturn(Collections.singletonList(new Booking()));
+        when(bookingService.getAll()).thenReturn(List.of(new Booking()));
 
         mockMvc.perform(get("/api/bookings"))
                 .andExpect(status().isOk());
